[FIX][ISSUE 2729] Alignment of Delay column in 'Overdue Task'

--- a/nh_eobs/static/src/css/nh_eobs.css
+++ b/nh_eobs/static/src/css/nh_eobs.css
@@ -50,6 +50,10 @@
     height: 25px;
 }
 
+.nh_eobs_overdue .oe_list_content td.oe_number{
+    text-align: left !important;
+}
+
 .nhc_obs [data-id="date_terminated"]{
     width: 250px;
 }
